# Binancial

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
.cursor/rules/: binancial-git-rules.mdc
.github/workflows/: coverage-gate.yml  pr_post_release.yml  style-gate.yml  test-gate.yml  type-gate.yml
binancial/: __init__.py  accountant.py  backtester.py
binancial/compute/: __init__.py  get_spot_klines.py  spot_kline_cache.py
binancial/compute/tests/: test_get_spot_klines.py  test_spot_kline_cache.py
binancial/data/: __init__.py  get_all_pairs.py  get_klines_historical.py  get_klines_realtime.py  get_trades_historical.py  get_trades_realtime.py
binancial/data/tests/: __init__.py  test_get_all_pairs.py  test_get_klines_historical.py  test_get_trades_historical.py
binancial/features/: __init__.py  datetime_related.py  is_day_highlow.py  price_changes_related.py  time_windows.py  trend_and_momentum.py  trend_and_momentun.py  trend_count.py
binancial/plots/: __init__.py  experiment_histogram.py  histogram.py
binancial/strategies/: __init__.py  mean_reversion_crossover.py  mean_strategy.py  random.py  volume_confirmed_momentum_crossover.py  weighted_random.py  xgboost.py
binancial/utils/: __init__.py  add_klines_features.py  get_colnames.py  init_binance_api.py
binancial/utils/tests/: test_utils.py
docs/: README.md  trend_and_momentum_features.md
docs/Developer/: Documentation-System.md
scripts/: create_release.py
tests/: test_xgboost_strategy.py
